[gd_scene load_steps=10 format=3 uid="uid://c5xtqyrxj4rpw"]

[ext_resource type="Script" path="res://scripts/tile/destructible_cover.gd" id="1_htaft"]
[ext_resource type="Script" path="res://scripts/characters/hurtbox.gd" id="2_x07t5"]
[ext_resource type="Texture2D" uid="uid://dlfsnvqssoku8" path="res://resource/destructible_cover.png" id="3_dgs3k"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_egx40"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_idx5w"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_4ytjs"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_nus5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vw6tc"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60u8n"]
size = Vector2(32, 32)

[node name="destructible_cover" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_htaft")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0
script = ExtResource("2_x07t5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_vw6tc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_60u8n")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("3_dgs3k")
hframes = 3

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_egx40")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("4_idx5w")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_4ytjs")

[node name="hurt" type="Node" parent="StateChart/CompoundState/Idle"]
script = ExtResource("6_nus5g")
to = NodePath("../../Hurt")
event = &"hurt"
delay_in_seconds = "0.0"

[node name="Hurt" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("5_4ytjs")

[node name="idle" type="Node" parent="StateChart/CompoundState/Hurt"]
script = ExtResource("6_nus5g")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/Hurt" to="." method="_on_hurt_state_entered"]
